r0.1 add Controller: Home, Expense
Signed-off-by: Nguyen Thanh Binh <binh.drca@gmail.com>

--- a/resources/sass/money.scss
+++ b/resources/sass/money.scss
@@ -20,6 +20,11 @@ $ios7-blue: #fff;
   background-size: cover;
 }
 
+.toolbar-icon-add {
+  background-image: url('../images/add_icon.png');
+  background-size: cover;
+}
+
 
 .button-rectangle {
 	background-image: url('../images/button_bg.png');	
