--- a/resources/css/atm.css
+++ b/resources/css/atm.css
@@ -1,6 +1,6 @@
 .atm-title-container {
 	height: 50px;
-	background-color: #333;
+	background-color: #666057;
 	color: #fff;
 	margin-bottom: 1px;
 }
@@ -13,17 +13,30 @@
 	font-size: 20px;
 }
 
+.atm-title-item-icon {
+	width: 40px;
+	height: 40px;
+	margin-left: 10px;	
+}
+
+.atm-tienmat-amount {
+	margin-right: 10px;
+}
+
 .atm-atmlist .info {
 	float: left;
+	margin-bottom: 8px;
 }
 
 .atm-atmlist .amount {
 	float: right;
-	margin-right: 30px;
+	margin-right: 32px;
+	margin-top: 8px;
 }
 
 .atm-savinglist .info {
 	float: left;
+	margin-bottom: 8px;
 }
 
 .atm-savinglist .amount {
